--- a/LeetCode/1091-1100/1092. 最短公共超序列（困难）.md
+++ b/LeetCode/1091-1100/1092. 最短公共超序列（困难）.md
@@ -90,36 +90,39 @@ class Solution {
     }
 }
 ```
-TypeScript 代码：
-```TypeScript
-function shortestCommonSupersequence(s1: string, s2: string): string {
-    const n = s1.length, m = s2.length
-    s1 = " " + s1; s2 = " " + s2
-    const f = new Array<Array<number>>()
-    for (let i = 0; i < n + 10; i++) f.push(new Array<number>(m + 10).fill(0))
-    for (let i = 1; i <= n; i++) {
-        for (let j = 1; j <= m; j++) {
-            if (s1[i] == s2[j]) f[i][j] = f[i - 1][j - 1] + 1
-            else f[i][j] = Math.max(f[i - 1][j], f[i][j - 1])
-        }
-    }
-    let ans = ""
-    let i = n, j = m
-    while (i > 0 || j > 0) {
-        if (i == 0) ans += s2[j--]
-        else if (j == 0) ans += s1[i--]
-        else {
-            if (s1[i] == s2[j]) {
-                ans += s1[i]
-                i--; j--
-            } else if (f[i][j] == f[i - 1][j]) {
-                ans += s1[i--]
-            } else {
-                ans += s2[j--]
+C++ 代码：
+```C++
+class Solution {
+public:
+    string shortestCommonSupersequence(string str1, string str2) {
+        int n = str1.size(), m = str2.size();
+        str1 = " " + str1; str2 = " " + str2;
+        vector<vector<int>> f(n + 10, vector<int>(m + 10));
+        for (int i = 1; i <= n; ++i) {
+            for (int j = 1; j <= m; ++j) {
+                if (str1[i] == str2[j])
+                    f[i][j] = f[i - 1][j - 1] + 1;
+                else 
+                    f[i][j] = max(f[i - 1][j], f[i][j - 1]);
             }
         }
+        string res;
+        int i = n, j = m;
+        while (i > 0 || j > 0) {
+            if (i == 0) res += str2[j--];
+            else if (j == 0) res += str1[i--];
+            else {
+                if (str1[i] == str2[j]) {
+                    res += str1[i];
+                    i--; j--;
+                }
+                else if (f[i][j] == f[i - 1][j]) res += str1[i--];
+                else res += str2[j--];
+            }
+        }
+        reverse(res.begin(), res.end());
+        return res;
     }
-    return ans.split('').reverse().join('')
 };
 ```
 Python 代码：
@@ -154,6 +157,38 @@ class Solution:
                     ans += s2[j]
                     j -= 1
         return ans[::-1]
+```
+TypeScript 代码：
+```TypeScript
+function shortestCommonSupersequence(s1: string, s2: string): string {
+    const n = s1.length, m = s2.length
+    s1 = " " + s1; s2 = " " + s2
+    const f = new Array<Array<number>>()
+    for (let i = 0; i < n + 10; i++) f.push(new Array<number>(m + 10).fill(0))
+    for (let i = 1; i <= n; i++) {
+        for (let j = 1; j <= m; j++) {
+            if (s1[i] == s2[j]) f[i][j] = f[i - 1][j - 1] + 1
+            else f[i][j] = Math.max(f[i - 1][j], f[i][j - 1])
+        }
+    }
+    let ans = ""
+    let i = n, j = m
+    while (i > 0 || j > 0) {
+        if (i == 0) ans += s2[j--]
+        else if (j == 0) ans += s1[i--]
+        else {
+            if (s1[i] == s2[j]) {
+                ans += s1[i]
+                i--; j--
+            } else if (f[i][j] == f[i - 1][j]) {
+                ans += s1[i--]
+            } else {
+                ans += s2[j--]
+            }
+        }
+    }
+    return ans.split('').reverse().join('')
+};
 ```
 * 时间复杂度：`LCS` 复杂度为 $O(n \times m)$；构造答案复杂度为 $O(n \times m)$。整体复杂度为 $O(n \times m)$
 * 空间复杂度：$O(n \times m)$
