--- a/LeetCode/1251-1260/1253. 重构 2 行二进制矩阵（中等）.md
+++ b/LeetCode/1251-1260/1253. 重构 2 行二进制矩阵（中等）.md
@@ -61,10 +61,11 @@ Tag : 「模拟」、「贪心」、「构造」
 
 若处理完 `colsum` 后，两行剩余 $1$ 个数恰好均为 $0$，说明构造出了合法方案。
 
-容易证明：**不存在某个决策回合中，必须先填入剩余个数少的一方，才能顺利构造。**可用反证法进行证明，若存在某个回合必须填入剩余个数少的一方（假设该回合上填 `1` 下填 `0`），必然能够找到同为 $colsum[j] = 1$ 的回合进行交换，同时不影响合法性（上下行的总和不变，同时 $colsum[i] = colsum[j] = 1$）。
+容易证明：**不存在某个决策回合中，必须先填入剩余个数少的一方，才能顺利构造。**
 
-代码：
+可用反证法进行证明，若存在某个回合必须填入剩余个数少的一方（假设该回合上填 `1` 下填 `0`），必然能够找到同为 $colsum[j] = 1$ 的回合进行交换，同时不影响合法性（上下行的总和不变，同时 $colsum[i] = colsum[j] = 1$）。
 
+Java 代码：
 ```Java
 class Solution {
     public List<List<Integer>> reconstructMatrix(int upper, int lower, int[] colsum) {
@@ -94,6 +95,93 @@ class Solution {
         return ans;
     }
 }
+```
+C++ 代码：
+```C++
+class Solution {
+public:
+    vector<vector<int>> reconstructMatrix(int upper, int lower, vector<int>& colsum) {
+        int n = colsum.size();
+        vector<vector<int>> ans;
+        vector<int> a, b;
+        for (int i = 0; i < n; i++) {
+            int m = colsum[i];
+            if (m == 0) {
+                a.push_back(0); b.push_back(0);
+            } else if (m == 2) {
+                upper--; lower--;
+                a.push_back(1); b.push_back(1);
+            } else {
+                if (upper >= lower) {
+                    upper--;
+                    a.push_back(1); b.push_back(0);
+                } else {
+                    lower--;
+                    a.push_back(0); b.push_back(1);
+                }
+            }
+        }
+        if (upper == 0 && lower == 0) {
+            ans.push_back(a); ans.push_back(b);
+        }
+        return ans;
+    }
+};
+```
+Python 代码：
+```Python
+class Solution:
+    def reconstructMatrix(self, upper: int, lower: int, colsum: List[int]) -> List[List[int]]:
+        n = len(colsum)
+        ans = []
+        a, b = [], []
+        for i in range(n):
+            m = colsum[i]
+            if m == 0:
+                a.append(0)
+                b.append(0)
+            elif m == 2:
+                upper, lower = upper - 1, lower - 1
+                a.append(1)
+                b.append(1)
+            else:
+                a.append(1 if upper >= lower else 0)
+                b.append(0 if upper >= lower else 1)
+                if upper >= lower: upper -= 1
+                else: lower -= 1
+        if upper == lower == 0:
+            ans.append(a)
+            ans.append(b)
+        return ans
+```
+TypeScript 代码：
+```TypeScript
+function reconstructMatrix(upper: number, lower: number, colsum: number[]): number[][] {
+    const n = colsum.length;
+    let ans: number[][] = [];
+    let a: number[] = [], b: number[] = [];
+    for (let i = 0; i < n; i++) {
+        const m = colsum[i];
+        if (m === 0) {
+            a.push(0); b.push(0);
+        } else if (m === 2) {
+            upper--; lower--;
+            a.push(1); b.push(1);
+        } else {
+            if (upper >= lower) {
+                upper--;
+                a.push(1); b.push(0);
+            } else {
+                lower--;
+                a.push(0); b.push(1);
+            }
+        }
+    }
+    if (upper === 0 && lower === 0) {
+        ans.push(a); ans.push(b);
+    }
+    return ans;
+};
 ```
 * 时间复杂度：$O(C \times n)$，其中 $C = 2$  代表行数
 * 空间复杂度：$O(C \times n)$
