--- a/LeetCode/1251-1260/1260. 二维网格迁移（简单）.md
+++ b/LeetCode/1251-1260/1260. 二维网格迁移（简单）.md
@@ -6,7 +6,9 @@ Tag : 「模拟」、「构造」
 
 
 
-给你一个 `m` 行 `n` 列的二维网格 `grid` 和一个整数 `k`。你需要将 `grid` 迁移 `k` 次。
+给你一个 `m` 行 `n` 列的二维网格 `grid` 和一个整数 `k`。
+
+你需要将 `grid` 迁移 `k` 次。
 
 每次「迁移」操作将会引发下述活动：
 
@@ -74,6 +76,39 @@ class Solution {
         return ans;
     }
 }
+```
+C++ 代码：
+```C++
+class Solution {
+public:
+    vector<vector<int>> shiftGrid(vector<vector<int>>& g, int k) {
+        int n = g.size(), m = g[0].size();
+        vector<vector<int>> mat(n, vector<int>(m));
+        for(int i = 0; i < m; ++i) {
+            int tcol = (i + k) % m, trow = ((i + k) / m) % n, idx = 0;
+            while(idx != n) {
+                mat[trow++][tcol] = g[idx++][i];
+                if(trow == n) trow = 0;
+            }
+        }
+        return mat;
+    }
+};
+```
+Python 代码：
+```Python
+class Solution:
+    def shiftGrid(self, g: List[List[int]], k: int) -> List[List[int]]:
+        n, m = len(g), len(g[0])
+        mat = [[0]*m for _ in range(n)]
+        for i in range(m):
+            tcol = (i + k) % m
+            trow = ((i + k) // m) % n
+            idx = 0
+            while idx != n:
+                mat[trow][tcol] = g[idx][i]
+                trow, idx = (trow + 1) % n, idx + 1
+        return mat
 ```
 TypeScript 代码：
 ```TypeScript
