--- a/LeetCode/1401-1410/1408. 数组中的字符串匹配（简单）.md
+++ b/LeetCode/1401-1410/1408. 数组中的字符串匹配（简单）.md
@@ -6,7 +6,9 @@ Tag : 「模拟」
 
 
 
-给你一个字符串数组 `words`，数组中的每个字符串都可以看作是一个单词。请你按 任意 顺序返回 `words` 中是其他单词的子字符串的所有单词。
+给你一个字符串数组 `words`，数组中的每个字符串都可以看作是一个单词。
+
+请你按任意顺序返回 `words` 中是其他单词的子字符串的所有单词。
 
 如果你可以删除 `words[j]` 最左侧和/或最右侧的若干字符得到 `word[i]`，那么字符串 `words[i]` 就是 `words[j]` 的一个子字符串。
 
