--- a/LeetCode/1471-1480/1473. 粉刷房子 III（困难）.md
+++ b/LeetCode/1471-1480/1473. 粉刷房子 III（困难）.md
@@ -83,16 +83,20 @@ Tag : 「动态规划」、「序列 DP」
     同时根据「第 $i$ 间房子的颜色 $j$」与「第 $i - 1$ 间房子的颜色 $p$」是否相同，会决定第 $i$ 间房子是否形成一个新的分区。这同样需要进行分情况讨论。
     整理后的转移方程为：
     
-    $$ f[i][j][k]=\begin{cases}
+    $$
+    f[i][j][k]=\begin{cases}
     min(f[i - 1][j][k], f[i - 1][p][k - 1]) &j == houses[i], p != j\\
     INF & j != houses[i]
-    \end{cases}$$
+    \end{cases}
+    $$
     
 * 第 $i$ 间房子尚未被上色，即 $houses[i] == 0$，此时房子可以被粉刷成任意颜色。不会有无效状态的情况。
   同样，根据「第 $i$ 间房子的颜色 $j$」与「第 $i - 1$ 间房子的颜色 $p$」是否相同，会决定第 $i$ 间房子是否形成一个新的分区。
     转移方程为：
 
-  $$ f[i][j][k] = min(f[i - 1][j][k], f[i - 1][p][k - 1]) + cost[i][j - 1], p != j $$
+  $$
+  f[i][j][k] = min(f[i - 1][j][k], f[i - 1][p][k - 1]) + cost[i][j - 1], p != j
+  $$
 
 一些编码细节：
 
@@ -167,8 +171,8 @@ class Solution {
     }
 }
 ```
-* 时间复杂度：共有 $m * n * t$ 个状态需要被转移，每次转移需要枚举「所依赖的状态」的颜色，复杂度为 $O(n)$。整体复杂度为 $O(m * n^2 * t)$
-* 空间复杂度：$O(m * n * t)$
+* 时间复杂度：共有 $m \times n \times t$ 个状态需要被转移，每次转移需要枚举「所依赖的状态」的颜色，复杂度为 $O(n)$。整体复杂度为 $O(m \times n^2 \times t)$
+* 空间复杂度：$O(m \times n \times t)$
 
 ---
 
@@ -280,8 +284,8 @@ class Solution {
     }
 }
 ```
-* 时间复杂度：共有 $m * n * t$ 个状态需要被转移，每次转移需要枚举「所依赖的状态」的颜色，复杂度为 $O(n)$。整体复杂度为 $O(m * n^2 * t)$
-* 空间复杂度：$O(m * n * t)$
+* 时间复杂度：共有 $m \times n \times t$ 个状态需要被转移，每次转移需要枚举「所依赖的状态」的颜色，复杂度为 $O(n)$。整体复杂度为 $O(m \times n^2 \times t)$
+* 空间复杂度：$O(m \times n \times t)$
 
 ---
 
