--- a/LeetCode/1631-1640/1640. 能否连接形成数组（简单）.md
+++ b/LeetCode/1631-1640/1640. 能否连接形成数组（简单）.md
@@ -6,7 +6,13 @@ Tag : 「排序」、「二分」、「哈希表」、「模拟」
 
 
 
-给你一个整数数组 `arr` ，数组中的每个整数 互不相同 。另有一个由整数数组构成的数组 `pieces`，其中的整数也 互不相同 。请你以 任意顺序 连接 `pieces` 中的数组以形成 `arr` 。但是，不允许 对每个数组 `pieces[i]` 中的整数重新排序。
+给你一个整数数组 `arr` ，数组中的每个整数 互不相同 。
+
+另有一个由整数数组构成的数组 `pieces`，其中的整数也互不相同。
+
+请你以任意顺序连接 `pieces` 中的数组以形成 `arr` 。
+
+但是，不允许对每个数组 `pieces[i]` 中的整数重新排序。
 
 如果可以连接 `pieces` 中的数组形成 `arr` ，返回 `true` ；否则，返回 `false` 。
 
@@ -79,24 +85,27 @@ class Solution {
     }
 }
 ```
-TypeScript 代码：
-```TypeScript
-function canFormArray(arr: number[], pieces: number[][]): boolean {
-    const n = arr.length, m = pieces.length
-    pieces.sort((a,b)=>a[0]-b[0])
-    for (let i = 0; i < n; ) {
-        let l = 0, r = m - 1
-        while (l < r) {
-            const mid = l + r + 1 >> 1
-            if (pieces[mid][0] <= arr[i]) l = mid
-            else r = mid - 1
+C++ 代码：
+```C++
+class Solution {
+public:
+    bool canFormArray(vector<int>& arr, vector<vector<int>>& pieces) {
+        int n = arr.size(), m = pieces.size();
+        sort(pieces.begin(), pieces.end());
+        for (int i = 0; i < n; ) {
+            int l = 0, r = m - 1;
+            while (l < r) {
+                int mid = l + r + 1 >> 1;
+                if (pieces[mid][0] <= arr[i]) l = mid;
+                else r = mid - 1;
+            }
+            int len = pieces[r].size(), idx = 0;
+            while (idx < len && pieces[r][idx] == arr[i + idx]) idx++;
+            if (idx == len) i += len;
+            else return false;
         }
-        let len = pieces[r].length, idx = 0
-        while (idx < len && pieces[r][idx] == arr[i + idx]) idx++
-        if (idx == len) i += len
-        else return false
+        return true;
     }
-    return true
 };
 ```
 Python 代码：
@@ -122,6 +131,26 @@ class Solution:
             else:
                 return False
         return True
+```
+TypeScript 代码：
+```TypeScript
+function canFormArray(arr: number[], pieces: number[][]): boolean {
+    const n = arr.length, m = pieces.length
+    pieces.sort((a,b)=>a[0]-b[0])
+    for (let i = 0; i < n; ) {
+        let l = 0, r = m - 1
+        while (l < r) {
+            const mid = l + r + 1 >> 1
+            if (pieces[mid][0] <= arr[i]) l = mid
+            else r = mid - 1
+        }
+        let len = pieces[r].length, idx = 0
+        while (idx < len && pieces[r][idx] == arr[i + idx]) idx++
+        if (idx == len) i += len
+        else return false
+    }
+    return true
+};
 ```
 * 时间复杂度：排序复杂度为 $O(m\log{m})$；构造的复杂度为 $O(n\log{m})$。整体复杂度为 $O(m\log{m} + n\log{m})$
 * 空间复杂度：$O(\log{m})$
@@ -150,19 +179,23 @@ class Solution {
     }
 }
 ```
-TypeScript 代码：
-```TypeScript
-function canFormArray(arr: number[], pieces: number[][]): boolean {
-    const n = arr.length, m = pieces.length
-    const hash = new Array<number>(110).fill(0)
-    for (let i = 0; i < m; i++) hash[pieces[i][0]] = i
-    for (let i = 0; i < n; ) {
-        let cur = pieces[hash[arr[i]]], sz = cur.length, idx = 0
-        while (idx < sz && cur[idx] == arr[i + idx]) idx++
-        if (idx == sz) i += sz
-        else return false
+C++ 代码：
+```C++
+class Solution {
+public:
+    bool canFormArray(vector<int>& arr, vector<vector<int>>& pieces) {
+        int n = arr.size(), m = pieces.size();
+        vector<int> hash(110);
+        for (int i = 0; i < m; i++) hash[pieces[i][0]] = i;
+        for (int i = 0; i < n; ) {
+            vector<int> cur = pieces[hash[arr[i]]];
+            int len = cur.size(), idx = 0;
+            while (idx < len && cur[idx] == arr[i + idx]) idx++;
+            if (idx == len) i += len;
+            else return false;
+        }
+        return true;
     }
-    return true
 };
 ```
 Python 代码：
@@ -184,6 +217,21 @@ class Solution:
             else:
                 return False
         return True
+```
+TypeScript 代码：
+```TypeScript
+function canFormArray(arr: number[], pieces: number[][]): boolean {
+    const n = arr.length, m = pieces.length
+    const hash = new Array<number>(110).fill(0)
+    for (let i = 0; i < m; i++) hash[pieces[i][0]] = i
+    for (let i = 0; i < n; ) {
+        let cur = pieces[hash[arr[i]]], sz = cur.length, idx = 0
+        while (idx < sz && cur[idx] == arr[i + idx]) idx++
+        if (idx == sz) i += sz
+        else return false
+    }
+    return true
+};
 ```
 * 时间复杂度：$O(n + m)$
 * 空间复杂度：$O(C)$，其中 $C = 110$ 为两数组的值域大小
