--- a/LeetCode/1751-1760/1759. 统计同构子字符串的数目（中等）.md
+++ b/LeetCode/1751-1760/1759. 统计同构子字符串的数目（中等）.md
@@ -6,11 +6,13 @@ Tag : 「双指针」、「数学」
 
 
 
-给你一个字符串 `s`，返回 `s` 中 同构子字符串 的数目。由于答案可能很大，只需返回对 $10^9 + 7$ 取余 后的结果。
+给你一个字符串 `s`，返回 `s` 中 同构子字符串 的数目。
 
-同构字符串 的定义为：如果一个字符串中的所有字符都相同，那么该字符串就是同构字符串。
+由于答案可能很大，只需返回对 $10^9 + 7$ 取余 后的结果。
 
-子字符串 是字符串中的一个连续字符序列。
+同构字符串的定义为：如果一个字符串中的所有字符都相同，那么该字符串就是同构字符串。
+
+子字符串是字符串中的一个连续字符序列。
 
 示例 1：
 ```
@@ -76,6 +78,40 @@ class Solution {
     }
 }
 ```
+C++ 代码：
+```C++
+class Solution {
+public:
+    int countHomogenous(string s) {
+        int n = s.size(), MOD = 1e9+7;
+        long ans = 0;
+        for (int i = 0; i < n; ) {
+            int j = i;
+            while (j < n && s[j] == s[i]) j++; 
+            long cnt = j - i;
+            ans += (1 + cnt) * cnt / 2;
+            ans %= MOD;
+            i = j;
+        }
+        return (int) ans;
+    }
+};
+```
+Python3 代码：
+```Python
+class Solution:
+    def countHomogenous(self, s: str) -> int:
+        n, mod, i, ans = len(s), 1e9+7, 0, 0
+        while i < n:
+            j = i
+            while j < n and s[j] == s[i]:
+                j += 1
+            cnt = j - i
+            ans += (cnt + 1) * cnt / 2
+            ans %= mod
+            i = j
+        return int(ans)
+```
 TypeScript 代码：
 ```TypeScript
 function countHomogenous(s: string): number {
@@ -90,21 +126,6 @@ function countHomogenous(s: string): number {
     }
     return ans
 }
-```
-Python3 代码：
-```Python3
-class Solution:
-    def countHomogenous(self, s: str) -> int:
-        n, mod, i, ans = len(s), 1e9+7, 0, 0
-        while i < n:
-            j = i
-            while j < n and s[j] == s[i]:
-                j += 1
-            cnt = j - i
-            ans += (cnt + 1) * cnt / 2
-            ans %= mod
-            i = j
-        return int(ans)
 ```
 * 时间复杂度：$O(n)$
 * 空间复杂度：$O(1)$
