--- a/LeetCode/1801-1810/1802. 有界数组中指定下标处的最大值（中等）.md
+++ b/LeetCode/1801-1810/1802. 有界数组中指定下标处的最大值（中等）.md
@@ -6,7 +6,9 @@ Tag : 「二分」、「数学」、「构造」、「贪心」、「模拟」
 
 
 
-给你三个正整数 `n`、`index` 和 `maxSum`。你需要构造一个同时满足下述所有条件的数组 `nums`（下标 从 `0` 开始 计数）：
+给你三个正整数 `n`、`index` 和 `maxSum`。
+
+你需要构造一个同时满足下述所有条件的数组 `nums`（下标 从 `0` 开始 计数）：
 
 * `nums.length == n`
 * `nums[i]` 是 正整数 ，其中 `0 <= i < n`
@@ -56,7 +58,7 @@ Tag : 「二分」、「数学」、「构造」、「贪心」、「模拟」
 
 利用「等差数列求和」公式分别从 `x - 1` 开始构造（注意：这里说的构造仅是计算 $nums$ 总和），若总和不超过 `max` 说明 $nums[idx] = x$ 满足要求，我们令 $l = mid$，否则令 $r = mid - 1$。
 
-代码：
+Java 代码：
 ```Java
 class Solution {
     public int maxValue(int n, int index, int max) {
@@ -89,6 +91,104 @@ class Solution {
         return sum <= max;
     }
 }
+```
+C++ 代码：
+```C++
+class Solution {
+public:
+    int maxValue(int n, int index, int maxSum) {
+        long l = 1, r = maxSum;
+        while (l < r) {
+            long mid = (l + r + 1) >> 1;
+            if (check(n, mid, index, maxSum)) l = mid;
+            else r = mid - 1;
+        }
+        return (int) r;
+    }
+    bool check(int n, long x, int idx, int maxSum) {
+        long sum = x;
+        if (idx > x - 1) {
+            long an = x - 1, a1 = 1, cnt = x - 1;
+            sum += cnt * (a1 + an) / 2;
+            sum += idx - cnt;
+        } else {
+            long cnt = idx, an = x - 1, a1 = an - cnt + 1;
+            sum += cnt * (a1 + an) / 2;
+        }
+        if (n - idx - 1 > x - 1) {
+            long an = x - 1, a1 = 1, cnt = x - 1;
+            sum += cnt * (a1 + an) / 2;
+            sum += n - idx - 1 - cnt;
+        } else {
+            long cnt = n - idx - 1, an = x - 1, a1 = an - cnt + 1;
+            sum += cnt * (a1 + an) / 2;
+        }
+        return sum <= maxSum;
+    }
+};
+```
+Python 代码：
+```Python
+class Solution:
+    def maxValue(self, n: int, index: int, maxSum: int) -> int:
+        l, r = 1, maxSum
+        while l < r:
+            mid = (l + r + 1) >> 1
+            if self.check(n, mid, index, maxSum): 
+                l = mid
+            else: 
+                r = mid - 1
+        return int(r)
+
+    def check(self, n, x, idx, maxSum):
+        sumv = x
+        if idx > x - 1:
+            an, a1, cnt = x - 1, 1, x - 1
+            sumv += cnt * (a1 + an) // 2
+            sumv += idx - cnt
+        else:
+            cnt, an, a1 = idx, x - 1, x - idx
+            sumv += cnt * (a1 + an) // 2
+        if n - idx - 1 > x - 1:
+            an, a1, cnt = x - 1, 1, x - 1
+            sumv += cnt * (a1 + an) // 2
+            sumv += n - idx - 1 - cnt
+        else:
+            cnt, an, a1 = n - idx - 1, x - 1, x - n + idx + 1
+            sumv += cnt * (a1 + an) // 2
+        return sumv <= maxSum
+```
+TypeScript 代码：
+```TypeScript
+function maxValue(n: number, index: number, maxSum: number): number {
+    const check = function(n: number, x: number, idx: number, maxSum: number): boolean {
+        let sum = x;
+        if (idx > x - 1) {
+            let an = x - 1, a1 = 1, cnt = x - 1;
+            sum += cnt * (a1 + an) / 2;
+            sum += idx - cnt;
+        } else {
+            let cnt = idx, an = x - 1, a1 = an - cnt + 1;
+            sum += cnt * (a1 + an) / 2;
+        }
+        if (n - idx - 1 > x - 1) {
+            let an = x - 1, a1 = 1, cnt = x - 1;
+            sum += cnt * (a1 + an) / 2;
+            sum += n - idx - 1 - cnt;
+        } else {
+            let cnt = n - idx - 1, an = x - 1, a1 = an - cnt + 1;
+            sum += cnt * (a1 + an) / 2;
+        }
+        return sum <= maxSum;
+    };
+    let l = 1, r = maxSum;
+    while (l < r) {
+        let mid = (l + r + 1) >> 1;
+        if (check(n, mid, index, maxSum)) l = mid;
+        else r = mid - 1;
+    }
+    return r;
+};
 ```
 * 时间复杂度：$O(\log{n})$
 * 空间复杂度：$O(1)$
