--- a/LeetCode/231-240/236. 二叉树的最近公共祖先（中等）.md
+++ b/LeetCode/231-240/236. 二叉树的最近公共祖先（中等）.md
@@ -51,7 +51,7 @@ Tag : 「二叉树」、「DFS」、「递归」
 
 常见的 `LCA` 问题。
 
-设计 `DFS` 函数 `boolean dfs(TreeNode cur, TreeNode t, List<TreeNode> path)`：其中 **`cur` 为当前处理到的节点，`t` 为需要找到的目的节点，`path` 为从根节点到当前节点 `cur` 所经过的路径**。若能够以当前节点 `cur` 为根的子树包含目标节点 `t`，函数返回 `true`，否则返回 `false`。
+设计 `DFS` 函数 `boolean dfs(TreeNode cur, TreeNode t, List<TreeNode> path)`：其中 **`cur` 为当前处理到的节点，`t` 为需要找到的目的节点，`path` 为从根节点到当前节点 `cur` 所经过的路径**。若能够以当前节点 `cur` 为根的子树包含目标节点 `t`，函数返回 `true`，否则返回 `false`。z
 
 调用函数分别传入 `p` 和 `q` 作为目标节点，从而得到从根节点到 `p` 和 `q` 的路径列表，遍历路径找到最后一个相同的节点即是答案。
 
