--- a/LeetCode/481-490/481. 神奇字符串（中等）.md
+++ b/LeetCode/481-490/481. 神奇字符串（中等）.md
@@ -10,7 +10,9 @@ Tag : 「模拟」、「构造」、「双指针」、「打表」
 
 * 神奇字符串 `s` 的神奇之处在于，串联字符串中 `'1'` 和 `'2'` 的连续出现次数可以生成该字符串。
 
-`s` 的前几个元素是 `s = "1221121221221121122……"` 。如果将 `s` 中连续的若干 `1` 和 `2` 进行分组，可以得到 `"1 22 11 2 1 22 1 22 11 2 11 22 ......"` 。每组中 `1` 或者 `2` 的出现次数分别是 `"1 2 2 1 1 2 1 2 2 1 2 2 ......"` 。上面的出现次数正是 s 自身。
+`s` 的前几个元素是 `s = "1221121221221121122……"` 。如果将 `s` 中连续的若干 `1` 和 `2` 进行分组，可以得到 `"1 22 11 2 1 22 1 22 11 2 11 22 ......"` 。
+
+每组中 `1` 或者 `2` 的出现次数分别是 `"1 2 2 1 1 2 1 2 2 1 2 2 ......"` 。上面的出现次数正是 `s` 自身。
 
 给你一个整数 `n` ，返回在神奇字符串 `s` 的前 `n` 个数字中 `1` 的数目。
 
@@ -89,6 +91,77 @@ class Solution {
     }
 }
 ```
+C++ 代码：
+```C++
+class Solution {
+public:
+    static const int N = 100010;
+    static vector<int> f;
+    Solution() {
+        if(!f.empty()) return;
+        f.resize(N);
+        string sb = "01"; // 首位多加一个 0 作为哨兵
+        for (int i = 1, j = 1, cnt = 0; i < N; j++) {
+            int last = sb[sb.size() - 1] - '0', t = sb[j] - '0';
+            if (last == 1) {
+                if (t == 1) {
+                    sb += '2';
+                    f[i++] = ++cnt;
+                } else {
+                    sb += "12";
+                    f[i++] = ++cnt; f[i++] = ++cnt;
+                }
+            } else {
+                if (t == 1) {
+                    sb += '1';
+                    f[i++] = cnt;
+                } else {
+                    sb += "21";
+                    f[i++] = f[i++] = cnt;
+                }
+            }
+        }
+    }
+    int magicalString(int n) {
+        return f[n];
+    }
+};
+vector<int> Solution::f = {};
+```
+Python 代码：
+```Python
+class Solution:
+    def magicalString(self, n: int) -> int:
+        ss = '01' # 首位多加一个 0 作为哨兵
+        i, j, cnt = 1, 1, 0
+        f = [0] * (n + 10)
+        while i <= n:
+            last, t = ss[i], ss[j]
+            if last == '1':
+                if t == '1':
+                    # 当原串当前字符是 1，而计数串当前字符为 1 
+                    # 往后构造形成的原串只能是 12，原串指针后移一位
+                    ss += '2'
+                    f[i], cnt, i = cnt + 1, cnt + 1, i + 1
+                else:
+                    # 当原串当前字符是 1，而计数串当前字符为 2
+                    # 往后构造形成的原串只能是 112，此时同步更新 f[i + 1]，原串指针后移两位
+                    ss += '12'
+                    f[i], f[i + 1], cnt, i = cnt + 1, cnt + 2, cnt + 2, i + 2
+            else:
+                if t == '1':
+                    # 当原串当前字符是 2，而计数串当前字符为 1 
+                    # 往后构造形成的原串只能是 21，原串指针后移一位
+                    ss += '1'
+                    f[i], i = cnt, i + 1
+                else:
+                    # 当原串当前字符是 2，而计数串当前字符为 2
+                    # 往后构造形成的原串只能是 221，原串指针后移两位
+                    ss += '21'
+                    f[i], f[i + 1], i = cnt, cnt, i + 2
+            j += 1
+        return f[n]
+```
 TypeScript 代码：
 ```TypeScript
 function magicalString(n: number): number {
@@ -124,40 +197,6 @@ function magicalString(n: number): number {
     }
     return f[n]
 }
-```
-Python 代码：
-```Python
-class Solution:
-    def magicalString(self, n: int) -> int:
-        ss = '01' # 首位多加一个 0 作为哨兵
-        i, j, cnt = 1, 1, 0
-        f = [0] * (n + 10)
-        while i <= n:
-            last, t = ss[i], ss[j]
-            if last == '1':
-                if t == '1':
-                    # 当原串当前字符是 1，而计数串当前字符为 1 
-                    # 往后构造形成的原串只能是 12，原串指针后移一位
-                    ss += '2'
-                    f[i], cnt, i = cnt + 1, cnt + 1, i + 1
-                else:
-                    # 当原串当前字符是 1，而计数串当前字符为 2
-                    # 往后构造形成的原串只能是 112，此时同步更新 f[i + 1]，原串指针后移两位
-                    ss += '12'
-                    f[i], f[i + 1], cnt, i = cnt + 1, cnt + 2, cnt + 2, i + 2
-            else:
-                if t == '1':
-                    # 当原串当前字符是 2，而计数串当前字符为 1 
-                    # 往后构造形成的原串只能是 21，原串指针后移一位
-                    ss += '1'
-                    f[i], i = cnt, i + 1
-                else:
-                    # 当原串当前字符是 2，而计数串当前字符为 2
-                    # 往后构造形成的原串只能是 221，原串指针后移两位
-                    ss += '21'
-                    f[i], f[i + 1], i = cnt, cnt, i + 2
-            j += 1
-        return f[n]
 ```
 * 时间复杂度：$O(n)$，若将 `static` 打表逻辑放到本地进行，能够减少构造的计算量，但仍会有创建答案数组的 $O(n)$ 开销，因此为均摊 $O(1)$
 * 空间复杂度：$O(n)$
