--- a/LeetCode/541-550/543. 二叉树的直径（简单）.md
+++ b/LeetCode/541-550/543. 二叉树的直径（简单）.md
@@ -6,13 +6,13 @@ Tag : 「二叉树」、「DFS」
 
 
 
-给你一棵二叉树的根节点，返回该树的 直径 。
+给你一棵二叉树的根节点，返回该树的直径。
 
-二叉树的 直径 是指树中任意两个节点之间最长路径的 长度 。
+二叉树的直径是指树中任意两个节点之间最长路径的长度。
 
 这条路径可能经过也可能不经过根节点 `root`。
 
-两节点之间路径的 长度 由它们之间边数表示。
+两节点之间路径的长度由它们之间边数表示。
 
 示例 1：
 ![](https://assets.leetcode.com/uploads/2021/03/06/diamtree.jpg)
@@ -46,7 +46,7 @@ Tag : 「二叉树」、「DFS」
 
 同时，`l + r` 则是以当前节点 `u` 为路径最高点时的路径长度，用此更新全局 `ans` 即可。
 
-代码：
+Java 代码：
 ```Java
 class Solution {
     int ans = 0;
@@ -61,6 +61,51 @@ class Solution {
         return Math.max(l, r) + 1;
     }
 }
+```
+C++ 代码：
+```C++
+class Solution {
+public:
+    int ans = 0;
+    int diameterOfBinaryTree(TreeNode* root) {
+        dfs(root);
+        return ans;
+    }
+    int dfs(TreeNode* u) {
+        if (u == NULL) return 0;
+        int l = dfs(u->left), r = dfs(u->right);
+        ans = max(ans, l + r);
+        return max(l, r) + 1;
+    }
+};
+```
+Python 代码：
+```Python
+class Solution:
+    def diameterOfBinaryTree(self, root: TreeNode) -> int:
+        ans = 0
+        def dfs(u):
+            nonlocal ans
+            if not u: return 0
+            left, right = dfs(u.left), dfs(u.right)
+            ans = max(ans, left + right)
+            return max(left, right) + 1 
+        dfs(root)
+        return ans
+```
+TypeScript 代码：
+```TypeScript
+function diameterOfBinaryTree(root: TreeNode | null): number {
+    let ans = 0;
+    const dfs = function(u: TreeNode): number {
+        if (!u) return 0;
+        const l = dfs(u.left), r = dfs(u.right);
+        ans = Math.max(ans, l + r);
+        return Math.max(l, r) + 1;
+    };
+    dfs(root);
+    return ans;
+};
 ```
 * 时间复杂度：$O(n)$
 * 空间复杂度：$O(n)$
