--- a/LeetCode/631-640/636. 函数的独占时间（中等）.md
+++ b/LeetCode/631-640/636. 函数的独占时间（中等）.md
@@ -6,13 +6,21 @@ Tag : 「模拟」、「栈」
 
 
 
-有一个单线程 `CPU` 正在运行一个含有 `n` 道函数的程序。每道函数都有一个位于  `0` 和 `n-1` 之间的唯一标识符。
+有一个单线程 `CPU` 正在运行一个含有 `n` 道函数的程序。
 
-函数调用 存储在一个调用栈上 ：当一个函数调用开始时，它的标识符将会推入栈中。而当一个函数调用结束时，它的标识符将会从栈中弹出。标识符位于栈顶的函数是当前正在执行的函数。每当一个函数开始或者结束时，将会记录一条日志，包括函数标识符、是开始还是结束、以及相应的时间戳。
+每道函数都有一个位于  `0` 和 `n-1` 之间的唯一标识符。
 
-给你一个由日志组成的列表 `logs` ，其中 `logs[i]` 表示第 `i` 条日志消息，该消息是一个按 `"{function_id}:{"start" | "end"}:{timestamp}"` 进行格式化的字符串。例如，`"0:start:3"` 意味着标识符为 `0` 的函数调用在时间戳 `3` 的 起始开始执行 ；而 `"1:end:2"` 意味着标识符为 `1` 的函数调用在时间戳 `2` 的末尾结束执行。注意，函数可以调用多次，可能存在递归调用 。
+函数调用存储在一个调用栈上 ：当一个函数调用开始时，它的标识符将会推入栈中。而当一个函数调用结束时，它的标识符将会从栈中弹出。标识符位于栈顶的函数是当前正在执行的函数。每当一个函数开始或者结束时，将会记录一条日志，包括函数标识符、是开始还是结束、以及相应的时间戳。
 
-函数的「独占时间」定义是在这个函数在程序所有函数调用中执行时间的总和，调用其他函数花费的时间不算该函数的独占时间。例如，如果一个函数被调用两次，一次调用执行 `2` 单位时间，另一次调用执行 `1` 单位时间，那么该函数的独占时间为 `2 + 1 = 3` 。
+给你一个由日志组成的列表 `logs` ，其中 `logs[i]` 表示第 `i` 条日志消息，该消息是一个按 `"{function_id}:{"start" | "end"}:{timestamp}"` 进行格式化的字符串。
+
+例如，`"0:start:3"` 意味着标识符为 `0` 的函数调用在时间戳 `3` 的 起始开始执行 ；而 `"1:end:2"` 意味着标识符为 `1` 的函数调用在时间戳 `2` 的末尾结束执行。
+
+注意，函数可以调用多次，可能存在递归调用 。
+
+函数的「独占时间」定义是在这个函数在程序所有函数调用中执行时间的总和，调用其他函数花费的时间不算该函数的独占时间。
+
+例如，如果一个函数被调用两次，一次调用执行 `2` 单位时间，另一次调用执行 `1` 单位时间，那么该函数的独占时间为 `2 + 1 = 3` 。
 
 以数组形式返回每个函数的独占时间，其中第 `i` 个下标对应的值表示标识符 `i` 的函数的独占时间。
 
@@ -113,6 +121,55 @@ class Solution {
         return ans;
     }
 }
+```
+C++ 代码：
+```C++
+class Solution {
+public:
+    vector<int> exclusiveTime(int n, vector<string>& logs) {
+        vector<int> ans(n, 0);
+        stack<int> s;
+        int cur = -1;
+        for (auto log : logs) {
+            istringstream ss(log);
+            string buf;
+            vector<string> tokens;
+            while (getline(ss, buf, ':')) {
+                tokens.push_back(buf);
+            }
+            int idx = stoi(tokens[0]), ts = stoi(tokens[2]);
+            if (tokens[1] == "start") {
+                if (!s.empty()) ans[s.top()] += ts - cur;
+                s.push(idx);
+                cur = ts;
+            } else {
+                ans[s.top()] += ts - cur + 1;
+                s.pop();
+                cur = ts + 1;
+            }
+        }
+        return ans;
+    }
+};
+```
+Python 代码：
+```Python
+class Solution:
+    def exclusiveTime(self, n: int, logs: List[str]) -> List[int]:
+        ans = [0] * n
+        s = []
+        cur = -1
+        for log in logs:
+            ss = log.split(':')
+            idx, ts = int(ss[0]), int(ss[2])
+            if ss[1] == "start":
+                if s: ans[s[-1]] += ts - cur
+                s.append(idx)
+                cur = ts
+            else:
+                ans[s.pop()] += ts - cur + 1
+                cur = ts + 1
+        return ans
 ```
 TypeScript 代码：
 ```TypeScript
