--- a/LeetCode/661-670/662. 二叉树最大宽度（中等）.md
+++ b/LeetCode/661-670/662. 二叉树最大宽度（中等）.md
@@ -6,11 +6,13 @@ Tag : 「二叉树」、「DFS」、「哈希表」
 
 
 
-给你一棵二叉树的根节点 `root`，返回树的 最大宽度 。
+给你一棵二叉树的根节点 `root`，返回树的最大宽度。
 
-树的 最大宽度 是所有层中最大的 宽度 。
+树的「最大宽度」是所有层中最大的宽度 。
 
-每一层的 宽度 被定义为该层最左和最右的非空节点（即，两个端点）之间的长度。将这个二叉树视作与满二叉树结构相同，两端点间会出现一些延伸到这一层的 `null` 节点，这些 `null` 节点也计入长度。
+每一层的宽度被定义为该层最左和最右的非空节点（即两个端点）之间的长度。
+
+将这个二叉树视作与满二叉树结构相同，两端点间会出现一些延伸到这一层的 `null` 节点，这些 `null` 节点也计入长度。
 
 题目数据保证答案将会在  `32` 位 带符号整数范围内。
 
@@ -78,6 +80,45 @@ class Solution {
         dfs(root.right, u << 1 | 1, depth + 1);
     }
 }
+```
+C++ 代码：
+```C++
+class Solution {
+public:
+    unordered_map<int, int> map;
+    int ans = 0;
+    int widthOfBinaryTree(TreeNode* root) {
+        dfs(root, 1, 0);
+        return ans;
+    }
+    void dfs(TreeNode* root, int u, int depth) {
+        if (!root) return;
+        if (!map.count(depth)) map[depth] = u;
+        ans = max(ans, u - map[depth] + 1);
+        u = u - map[depth] + 1;
+        dfs(root->left, u << 1, depth + 1);
+        dfs(root->right, u << 1 | 1, depth + 1);
+    }
+};
+```
+Python 代码：
+```Python
+class Solution:
+    def widthOfBinaryTree(self, root: Optional[TreeNode]) -> int:
+        mapping = {}
+        ans = 0
+        def dfs(root, u, depth):
+            nonlocal ans
+            if not root: 
+                return
+            if depth not in mapping: 
+                mapping[depth] = u
+            ans = max(ans, u - mapping[depth] + 1)
+            u = u - mapping[depth] + 1
+            dfs(root.left, u << 1, depth + 1)
+            dfs(root.right, u << 1 | 1, depth + 1)
+        dfs(root, 1, 0)
+        return ans
 ```
 TypeScript 代码：
 ```TypeScript
