--- a/LeetCode/681-690/687. 最长同值路径（中等）.md
+++ b/LeetCode/681-690/687. 最长同值路径（中等）.md
@@ -60,6 +60,51 @@ class Solution {
     }
 }
 ```
+C++ 代码：
+```C++
+class Solution {
+public:
+    int maxv = 0;
+    int dfs(TreeNode* root) {
+        if (root == nullptr) return 0;
+        int ans = 0, cur = 0;
+        int l = dfs(root->left), r = dfs(root->right);
+        if (root->left != nullptr && root->left->val == root->val) {
+            ans = l + 1; cur += l + 1;
+        }
+        if (root->right != nullptr && root->right->val == root->val) {
+            ans = max(ans, r + 1); cur += r + 1;
+        }
+        maxv = max(maxv, cur);
+        return ans;
+    }
+    int longestUnivaluePath(TreeNode* root) {
+        dfs(root);
+        return maxv;
+    }
+};
+```
+Python 代码：
+```Python
+class Solution:
+    def longestUnivaluePath(self, root: Optional[TreeNode]) -> int:
+        maxv = 0
+        def dfs(root):
+            nonlocal maxv
+            if not root: return 0
+            ans, cur = 0, 0
+            l, r = dfs(root.left), dfs(root.right)
+            if root.left and root.left.val == root.val:
+                ans = l + 1
+                cur += l + 1
+            if root.right and root.right.val == root.val:
+                ans = max(ans, r + 1)
+                cur += r + 1
+            maxv = max(maxv, cur)
+            return ans
+        dfs(root)
+        return maxv
+```
 TypeScript 代码：
 ```TypeScript
 let max = 0;
