--- a/LeetCode/761-770/764. 最大加号标志（中等）.md
+++ b/LeetCode/761-770/764. 最大加号标志（中等）.md
@@ -8,9 +8,13 @@ Tag : 「模拟」、「预处理」
 
 在一个 $n \times n$ 的矩阵 `grid` 中，除了在数组 `mines` 中给出的元素为 `0`，其他每个元素都为 `1`。$mines[i] = [x_i, y_i]$ 表示 $grid[x_i][y_i] = 0$。
 
-返回  `grid` 中包含 `1` 的最大的 轴对齐 加号标志的阶数 。如果未找到加号标志，则返回 `0` 。
+返回  `grid` 中包含 `1` 的最大的轴对齐加号标志的阶数 。
 
-一个 `k` 阶由 `1` 组成的 “轴对称”加号标志 具有中心网格 $grid[r][c] = 1$ ，以及 `4` 个从中心向上、向下、向左、向右延伸，长度为 `k-1`，由 `1` 组成的臂。注意，只有加号标志的所有网格要求为 `1` ，别的网格可能为 `0` 也可能为 `1` 。
+如果未找到加号标志，则返回 `0` 。
+
+一个 `k` 阶由 `1` 组成的 “轴对称”加号标志 具有中心网格 $grid[r][c] = 1$ ，以及 `4` 个从中心向上、向下、向左、向右延伸，长度为 `k-1`，由 `1` 组成的臂。
+
+注意，只有加号标志的所有网格要求为 `1` ，别的网格可能为 `0` 也可能为 `1` 。
 
 示例 1：
 ![](https://assets.leetcode.com/uploads/2021/06/13/plus1-grid.jpg)
@@ -81,6 +85,58 @@ class Solution {
     }
 }
 ```
+C++ 代码：
+```C++
+class Solution {
+public:
+    int orderOfLargestPlusSign(int n, vector<vector<int>>& mines) {
+        vector<vector<int>> g(n + 10, vector<int>(n + 10, 1));
+        for (vector<int>& info : mines) g[info[0] + 1][info[1] + 1] = 0;
+        vector<vector<int>> a(n + 10, vector<int>(n + 10)), b(n + 10, vector<int>(n + 10)), c(n + 10, vector<int>(n + 10)), d(n + 10, vector<int>(n + 10));
+        for (int i = 1; i <= n; i++) {
+            for (int j = 1; j <= n; j++) {
+                if (g[i][j] == 1) {
+                    a[i][j] = a[i - 1][j] + 1;
+                    b[i][j] = b[i][j - 1] + 1;
+                }
+                if (g[n + 1 - i][n + 1 - j] == 1) {
+                    c[n + 1 - i][n + 1 - j] = c[n + 2 - i][n + 1 - j] + 1;
+                    d[n + 1 - i][n + 1 - j] = d[n + 1 - i][n + 2 - j] + 1;
+                }
+            }
+        }
+        int ans = 0;
+        for (int i = 1; i <= n; i++) {
+            for (int j = 1; j <= n; j++) {
+                ans = max(ans, min(min(a[i][j], b[i][j]), min(c[i][j], d[i][j])));
+            }
+        }
+        return ans;
+    }
+};
+```
+Python 代码：
+```Python
+class Solution:
+    def orderOfLargestPlusSign(self, n: int, mines: List[List[int]]) -> int:
+        g = [[1] * (n + 10) for _ in range(n + 10)]
+        for x, y in mines:
+            g[x + 1][y + 1] = 0
+        a, b, c, d = [[0] * (n + 10) for _ in range(n + 10)], [[0] * (n + 10) for _ in range(n + 10)], [[0] * (n + 10) for _ in range(n + 10)], [[0] * (n + 10) for _ in range(n + 10)]
+        for i in range(1, n + 1):
+            for j in range(1, n + 1):
+                if g[i][j] == 1:
+                    a[i][j] = a[i - 1][j] + 1
+                    b[i][j] = b[i][j - 1] + 1
+                if g[n + 1 - i][n + 1 - j] == 1:
+                    c[n + 1 - i][n + 1 - j] = c[n + 2 - i][n + 1 - j] + 1
+                    d[n + 1 - i][n + 1 - j] = d[n + 1 - i][n + 2 - j] + 1
+        ans = 0
+        for i in range(1, n + 1):
+            for j in range(1, n + 1):
+                ans = max(ans, min(min(a[i][j], b[i][j]), min(c[i][j], d[i][j])))
+        return ans
+```
 TypeScript 代码：
 ```TypeScript
 function orderOfLargestPlusSign(n: number, mines: number[][]): number {
@@ -112,28 +168,6 @@ function orderOfLargestPlusSign(n: number, mines: number[][]): number {
     }
     return ans
 }
-```
-Python 代码：
-```Python
-class Solution:
-    def orderOfLargestPlusSign(self, n: int, mines: List[List[int]]) -> int:
-        g = [[1] * (n + 10) for _ in range(n + 10)]
-        for x, y in mines:
-            g[x + 1][y + 1] = 0
-        a, b, c, d = [[0] * (n + 10) for _ in range(n + 10)], [[0] * (n + 10) for _ in range(n + 10)], [[0] * (n + 10) for _ in range(n + 10)], [[0] * (n + 10) for _ in range(n + 10)]
-        for i in range(1, n + 1):
-            for j in range(1, n + 1):
-                if g[i][j] == 1:
-                    a[i][j] = a[i - 1][j] + 1
-                    b[i][j] = b[i][j - 1] + 1
-                if g[n + 1 - i][n + 1 - j] == 1:
-                    c[n + 1 - i][n + 1 - j] = c[n + 2 - i][n + 1 - j] + 1
-                    d[n + 1 - i][n + 1 - j] = d[n + 1 - i][n + 2 - j] + 1
-        ans = 0
-        for i in range(1, n + 1):
-            for j in range(1, n + 1):
-                ans = max(ans, min(min(a[i][j], b[i][j]), min(c[i][j], d[i][j])))
-        return ans
 ```
 * 时间复杂度：$O(n^2)$
 * 空间复杂度：$O(n^2)$
