--- a/LeetCode/771-780/777. 在LR字符串中交换相邻字符（中等）.md
+++ b/LeetCode/771-780/777. 在LR字符串中交换相邻字符（中等）.md
@@ -1,6 +1,6 @@
 ### 题目描述
 
-这是 LeetCode 上的 **[777. 在LR字符串中交换相邻字符](https://leetcode-cn.com/problems/swim-in-rising-water/solution/gong-shui-san-xie-yi-ti-shuang-jie-krusk-7c6o/)** ，难度为 **中等**。
+这是 LeetCode 上的 **[777. 在LR字符串中交换相邻字符](https://leetcode.cn/problems/swap-adjacent-in-lr-string/solutions/1863778/by-ac_oier-ye71/)** ，难度为 **中等**。
 
 Tag : 「双指针」
 
@@ -44,7 +44,7 @@ XRLXXRRLX
 
 其中「序号」是指在 `LR` 字符串中出现的相对顺序。
 
-代码：
+Java 代码：
 ```Java
 class Solution {
     public boolean canTransform(String start, String end) {
@@ -61,6 +61,58 @@ class Solution {
         return i == j;
     }
 }
+```
+C++ 代码：
+```C++
+class Solution {
+public:
+    bool canTransform(string start, string end) {
+        int n = start.size();
+        int i = 0, j = 0;
+        while (i < n || j < n) {
+            while (i < n && start[i] == 'X') i++;
+            while (j < n && end[j] == 'X') j++;
+            if (i == n || j == n) return i == j;
+            if (start[i] != end[j]) return false;
+            if (start[i] == 'L' && i < j) return false;
+            if (start[i] == 'R' && i > j) return false;
+            i++; j++;
+        }
+        return i == j;
+    }
+};
+```
+Python 代码：
+```Python
+class Solution:
+    def canTransform(self, start: str, end: str) -> bool:
+        i, j, n = 0, 0, len(start)
+        while i < n or j < n:
+            while i < n and start[i] == 'X': i += 1
+            while j < n and end[j] == 'X': j += 1
+            if i == n or j == n: return i == j
+            if start[i] != end[j]: return False
+            if start[i] == 'L' and i < j: return False
+            if start[i] == 'R' and i > j: return False
+            i, j = i + 1, j + 1
+        return i == j
+```
+TypeScript 代码：
+```TypeScript
+function canTransform(start: string, end: string): boolean {
+    let n = start.length;
+    let i = 0, j = 0;
+    while (i < n || j < n) {
+        while (i < n && start.charAt(i) === 'X') i++;
+        while (j < n && end.charAt(j) === 'X') j++;
+        if (i === n || j === n) return i === j;
+        if (start.charAt(i) !== end.charAt(j)) return false;
+        if (start.charAt(i) === 'L' && i < j) return false;
+        if (start.charAt(i) === 'R' && i > j) return false;
+        i++; j++;
+    }
+    return i === j;
+};
 ```
 * 时间复杂度：$O(n)$
 * 空间复杂度：$O(1)$
