--- a/LeetCode/791-800/791. 自定义字符串排序（中等）.md
+++ b/LeetCode/791-800/791. 自定义字符串排序（中等）.md
@@ -6,11 +6,15 @@ Tag : 「构造」、「模拟」
 
 
 
-给定两个字符串 `order` 和 `s` 。`order` 的所有单词都是 唯一 的，并且以前按照一些自定义的顺序排序。
+给定两个字符串 `order` 和 `s` 。
 
-对 `s` 的字符进行置换，使其与排序的 `order` 相匹配。更具体地说，如果在 `order` 中的字符 `x` 出现字符 `y` 之前，那么在排列后的字符串中， `x` 也应该出现在 `y` 之前。
+`order` 的所有单词都是唯一的，并且以前按照一些自定义的顺序排序。
 
-返回 满足这个性质的 `s` 的任意排列 。
+对 `s` 的字符进行置换，使其与排序的 `order` 相匹配。
+
+更具体地说，如果在 `order` 中的字符 `x` 出现字符 `y` 之前，那么在排列后的字符串中， `x` 也应该出现在 `y` 之前。
+
+返回满足这个性质的 `s` 的任意排列 。
 
 示例 1:
 ```
@@ -60,20 +64,23 @@ class Solution {
     }
 }
 ```
-TypeScript 代码：
-```TypeScript
-function customSortString(order: string, s: string): string {
-    const cnts = new Array<number>(26).fill(0)
-    for (const c of s) cnts[c.charCodeAt(0) - 'a'.charCodeAt(0)]++
-    let ans = ''
-    for (const c of order) {
-        while (cnts[c.charCodeAt(0) - 'a'.charCodeAt(0)]-- > 0) ans += c
+C++ 代码：
+```C++
+class Solution {
+public:
+    string customSortString(string order, string s) {
+        vector<int> cnts(26, 0);
+        for (char c : s) cnts[c - 'a']++;
+        string result = "";
+        for (char c : order) {
+            while (cnts[c - 'a']-- > 0) result += c;
+        }
+        for (int i = 0; i < 26; i++) {
+            while (cnts[i]-- > 0) result += (char)(i + 'a');
+        }
+        return result;
     }
-    for (let i = 0; i < 26; i++) {
-        while (cnts[i]-- > 0) ans += String.fromCharCode(i + 'a'.charCodeAt(0));
-    }
-    return ans
-}
+};
 ```
 Python 代码：
 ```Python
@@ -92,6 +99,21 @@ class Solution:
             if cnts[i] > 0:
                 ans += chr(i + ord('a')) * cnts[i]
         return ans
+```
+TypeScript 代码：
+```TypeScript
+function customSortString(order: string, s: string): string {
+    const cnts = new Array<number>(26).fill(0)
+    for (const c of s) cnts[c.charCodeAt(0) - 'a'.charCodeAt(0)]++
+    let ans = ''
+    for (const c of order) {
+        while (cnts[c.charCodeAt(0) - 'a'.charCodeAt(0)]-- > 0) ans += c
+    }
+    for (let i = 0; i < 26; i++) {
+        while (cnts[i]-- > 0) ans += String.fromCharCode(i + 'a'.charCodeAt(0));
+    }
+    return ans
+}
 ```
 * 时间复杂度：$O(n + m)$
 * 空间复杂度：$O(C)$，其中 $C = 26$ 为字符集大小
