--- a/LeetCode/801-810/805. 数组的均值分割（困难）.md
+++ b/LeetCode/801-810/805. 数组的均值分割（困难）.md
@@ -6,7 +6,7 @@ Tag : 「折半搜索」、「二进制枚举」、「哈希表」
 
 
 
-给定你一个整数数组 `nums`
+给定你一个整数数组 `nums`。
 
 我们要将 `nums` 数组中的每个元素移动到 `A` 数组 或者 `B` 数组中，使得 `A` 数组和 `B` 数组不为空，并且 `average(A) == average(B)` 。
 
@@ -65,7 +65,7 @@ Tag : 「折半搜索」、「二进制枚举」、「哈希表」
 
 因此我们可以直接枚举系数 $k$ 来进行判定，其中 $k$ 的取值范围为 $[\max(1, cnt'), n - 1]$，结合上式算得 $t = k \times \frac{sum}{n}$，若在缓存结果中存在 $(t - tot', k - cnt')$，说明存在合法方案。
 
-代码：
+Java 代码：
 ```Java
 class Solution {
     public boolean splitArraySameAverage(int[] nums) {
@@ -101,6 +101,107 @@ class Solution {
         return false;
     }
 }
+```
+C++ 代码：
+```C++
+class Solution {
+public:
+    bool splitArraySameAverage(vector<int>& nums) {
+        int n = nums.size(), m = n / 2, sum = 0;
+        for (int x : nums) sum += x;
+        map<int, unordered_set<int>> hashMap;
+        for (int s = 0; s < (1 << m); s++) {
+            int tot = 0, cnt = 0;
+            for (int i = 0; i < m; i++) {
+                if ((s >> i) & 1) {
+                    tot += nums[i]; cnt++;
+                }
+            }
+            hashMap[tot].insert(cnt);
+        }
+        for (int s = 0; s < (1 << (n - m)); s++) {
+            int tot = 0, cnt = 0;
+            for (int i = 0; i < (n - m); i++) {
+                if ((s >> i) & 1) {
+                    tot += nums[i + m]; cnt++;
+                }
+            }
+            for (int k = max(1, cnt); k < n; k++) {
+                if (k * sum % n != 0) continue;
+                int t = k * sum / n;
+                if (hashMap.count(t - tot) == 0) continue;
+                if (!hashMap[t - tot].count(k - cnt)) continue;
+                return true;
+            }
+        }
+        return false;
+    }
+};
+```
+Python 代码：
+```Python
+from collections import defaultdict
+
+class Solution:
+    def splitArraySameAverage(self, nums: List[int]) -> bool:
+        n, m = len(nums), len(nums) // 2
+        sum_nums = sum(nums)
+        hash_map = defaultdict(set)
+        for s in range(1 << m):
+            tot = cnt = 0
+            for i in range(m):
+                if ((s >> i) & 1):
+                    tot += nums[i]
+                    cnt += 1
+            hash_map[tot].add(cnt)
+        for s in range(1 << (n - m)):
+            tot = cnt = 0
+            for i in range(n - m):
+                if ((s >> i) & 1):
+                    tot += nums[i + m]
+                    cnt += 1
+            for k in range(max(1, cnt), n):
+                if (k * sum_nums) % n != 0: continue
+                t = (k * sum_nums) // n
+                if (t - tot) not in hash_map: continue
+                if (k - cnt) not in hash_map[t - tot]: continue
+                return True
+        return False
+```
+TypeScript 代码：
+```TypeScript
+function splitArraySameAverage(nums: number[]): boolean {
+    let n = nums.length, m = Math.floor(n / 2), sum = 0;
+    for (let x of nums) sum += x;
+    let map = new Map();
+    for (let s = 0; s < (1 << m); s++) {
+        let tot = 0, cnt = 0;
+        for (let i = 0; i < m; i++) {
+            if (((s >> i) & 1) == 1) {
+                tot += nums[i]; cnt++;
+            }
+        }
+        let set = map.get(tot) || new Set();
+        set.add(cnt);
+        map.set(tot, set);
+    }
+    for (let s = 0; s < (1 << (n - m)); s++) {
+        let tot = 0, cnt = 0;
+        for (let i = 0; i < (n - m); i++) {
+            if (((s >> i) & 1) == 1) {
+                tot += nums[i + m]; cnt++;
+            }
+        }
+        for (let k = Math.max(1, cnt); k < n; k++) {
+            if (k * sum % n != 0) continue;
+            let t = Math.floor(k * sum / n);
+            if (!map.has(t - tot)) continue;
+            if (!map.get(t - tot).has(k - cnt)) continue;
+            return true;
+        }
+    }
+    return false;
+};
 ```
 * 时间复杂度：对原数组前半部分搜索复杂度为 $O(2^{\frac{n}{2}})$；对原数组后半部分搜索复杂度为 $O(2^{\frac{n}{2}})$，搜索同时检索前半部分的结果需要枚举系数 `k`，复杂度为 $O(n)$。整体复杂度为 $O(n \times 2^{\frac{n}{2}})$
 * 空间复杂度：$O(2^{\frac{n}{2}})$
