--- a/LeetCode/801-810/808. 分汤（中等）.md
+++ b/LeetCode/801-810/808. 分汤（中等）.md
@@ -6,18 +6,28 @@ Tag : 「数学」、「动态规划」、「线性 DP」
 
 
 
-有 `A` 和 `B` 两种类型 的汤。一开始每种类型的汤有 `n` 毫升。有四种分配操作：
+有 `A` 和 `B` 两种类型 的汤，一开始每种类型的汤有 `n` 毫升。
+
+有四种分配操作：
 
 1. 提供 `100ml` 的 汤A 和 `0ml` 的 汤B 。
 2. 提供 `75ml` 的 汤A 和 `25ml` 的 汤B 。
 3. 提供 `50ml` 的 汤A 和 `50ml` 的 汤B 。
 4. 提供 `25ml` 的 汤A 和 `75ml` 的 汤B 。
 
-当我们把汤分配给某人之后，汤就没有了。每个回合，我们将从四种概率同为 `0.25` 的操作中进行分配选择。如果汤的剩余量不足以完成某次操作，我们将尽可能分配。当两种类型的汤都分配完时，停止操作。
+当我们把汤分配给某人之后，汤就没有了。
+
+每个回合，我们将从四种概率同为 `0.25` 的操作中进行分配选择。
+
+如果汤的剩余量不足以完成某次操作，我们将尽可能分配。
+
+当两种类型的汤都分配完时，停止操作。
 
 注意 不存在先分配 `100 ml` 汤B 的操作。
 
-需要返回的值： 汤A 先分配完的概率 +  汤A和汤B 同时分配完的概率 / 2。返回值在正确答案 $10^{-5}$ 的范围内将被认为是正确的。
+需要返回的值：汤A 先分配完的概率 +  汤A和汤B 同时分配完的概率 / 2。
+
+返回值在正确答案 $10^{-5}$ 的范围内将被认为是正确的。
 
 示例 1:
 ```
@@ -92,6 +102,26 @@ class Solution {
     }
 }
 ```
+C++ 代码：
+```C++
+class Solution {
+public:
+    double soupServings(int n) {
+        n = min(200, (int)ceil(n / 25.0));
+        vector<vector<double>> f(n + 10, vector<double>(n + 10, 0));
+        f[0][0] = 0.5;
+        for (int j = 1; j <= n; ++j) f[0][j] = 1;
+        for (int i = 1; i <= n; ++i) {
+            for (int j = 1; j <= n; ++j) {
+                double a = f[max(i - 4, 0)][j], b = f[max(i - 3, 0)][max(j - 1, 0)];
+                double c = f[max(i - 2, 0)][max(j - 2, 0)], d = f[max(i - 1, 0)][max(j - 3, 0)];
+                f[i][j] = 0.25 * (a + b + c + d);
+            }
+        }
+        return f[n][n];
+    }
+};
+```
 Python 代码：
 ```Python
 class Solution:
@@ -107,6 +137,23 @@ class Solution:
                 c, d = f[max(i - 2, 0)][max(j - 2, 0)], f[max(i - 1, 0)][max(j - 3, 0)]
                 f[i][j] = 0.25 * (a + b + c + d)
         return f[n][n]
+```
+TypeScript 代码：
+```TypeScript
+function soupServings(n: number): number {
+    n = Math.min(200, Math.ceil(n / 25.0));
+    const f: number[][] = Array(n + 10).fill(0).map(() => Array(n + 10).fill(0));
+    f[0][0] = 0.5;
+    for (let j = 1; j <= n; j++) f[0][j] = 1;
+    for (let i = 1; i <= n; i++) {
+        for (let j = 1; j <= n; j++) {
+            let a = f[Math.max(i - 4, 0)][j], b = f[Math.max(i - 3, 0)][Math.max(j - 1, 0)];
+            let c = f[Math.max(i - 2, 0)][Math.max(j - 2, 0)], d = f[Math.max(i - 1, 0)][Math.max(j - 3, 0)];
+            f[i][j] = 0.25 * (a + b + c + d);
+        }
+    }
+    return f[n][n]; 
+};
 ```
 * 时间复杂度：$O(m^2)$，其中 $m = 200$ 为验算值
 * 空间复杂度：$O(m^2)$
