--- a/LeetCode/861-870/864. 获取所有钥匙的最短路径（困难）.md
+++ b/LeetCode/861-870/864. 获取所有钥匙的最短路径（困难）.md
@@ -6,7 +6,7 @@ Tag : 「BFS」、「状态压缩」
 
 
 
-给定一个二维网格 grid ，其中：
+给定一个二维网格 `g`，其中：
 
 * `'.'` 代表一个空房间
 * `'#'` 代表一堵墙
@@ -14,16 +14,24 @@ Tag : 「BFS」、「状态压缩」
 * 小写字母代表钥匙
 * 大写字母代表锁
 
-我们从起点开始出发，一次移动是指向四个基本方向之一行走一个单位空间。我们不能在网格外面行走，也无法穿过一堵墙。如果途经一个钥匙，我们就把它捡起来。除非我们手里有对应的钥匙，否则无法通过锁。
+我们从起点开始出发，一次移动是指向四个基本方向之一行走一个单位空间。
 
-假设 `k` 为 钥匙/锁 的个数，且满足 $1 <= k <= 6$，字母表中的前 `k` 个字母在网格中都有自己对应的一个小写和一个大写字母。换言之，每个锁有唯一对应的钥匙，每个钥匙也有唯一对应的锁。另外，代表钥匙和锁的字母互为大小写并按字母顺序排列。
+我们不能在网格外面行走，也无法穿过一堵墙。
 
-返回获取所有钥匙所需要的移动的最少次数。如果无法获取所有钥匙，返回 `-1` 。
+如果途经一个钥匙，我们就把它捡起来，除非我们手里有对应的钥匙，否则无法通过锁。
+
+假设 `k` 为 钥匙/锁 的个数，且满足 $1 <= k <= 6$，字母表中的前 `k` 个字母在网格中都有自己对应的一个小写和一个大写字母。
+
+换言之，每个锁有唯一对应的钥匙，每个钥匙也有唯一对应的锁。另外，代表钥匙和锁的字母互为大小写并按字母顺序排列。
+
+返回获取所有钥匙所需要的移动的最少次数。
+
+如果无法获取所有钥匙，返回 `-1` 。
 
 示例 1：
 ![](https://assets.leetcode.com/uploads/2021/07/23/lc-keys2.jpg)
 ```
-输入：grid = ["@.a.#","###.#","b.A.B"]
+输入：g = ["@.a.#","###.#","b.A.B"]
 
 输出：8
 
@@ -32,25 +40,25 @@ Tag : 「BFS」、「状态压缩」
 示例 2：
 ![](https://assets.leetcode.com/uploads/2021/07/23/lc-key2.jpg)
 ```
-输入：grid = ["@..aA","..B#.","....b"]
+输入：g = ["@..aA","..B#.","....b"]
 
 输出：6
 ```
 示例 3:
 ![](https://assets.leetcode.com/uploads/2021/07/23/lc-keys3.jpg)
 ```
-输入: grid = ["@Aa"]
+输入: g = ["@Aa"]
 
 输出: -1
 ```
 
 提示：
-* $m == grid.length$
-* $n == grid[i].length$
+* $m = g.length$
+* $n = g[i].length$
 * $1 <= m, n <= 30$
-* `grid[i][j]` 只含有 `'.'`,`'#'`, `'@'`, `'a'-'f'` 以及 `'A'-'F'`
+* `g[i][j]` 只含有 `'.'`,`'#'`, `'@'`, `'a'-'f'` 以及 `'A'-'F'`
 * 钥匙的数目范围是 $[1, 6]$
-* 每个钥匙都对应一个 不同 的字母
+* 每个钥匙都对应一个不同的字母
 * 每个钥匙正好打开一个对应的锁
 
 ---
@@ -120,6 +128,86 @@ class Solution {
     }
 }
 ```
+C++ 代码：
+```C++
+class Solution {
+    int N = 35, K = 10, INF = 0x3f3f3f3f;
+    vector<vector<vector<int>>> dist = vector<vector<vector<int>>>(N, vector<vector<int>>(N, vector<int>(1<<K, INF)));
+    vector<vector<int>> dirs = {{1,0}, {-1,0}, {0,1}, {0,-1}};
+public:
+    int shortestPathAllKeys(vector<string>& g) {
+        int n = g.size(), m = g[0].size(), cnt = 0;
+        queue<vector<int>> d;
+        for (int i = 0; i < n; i++) {
+            for (int j = 0; j < m; j++) {
+                fill(dist[i][j].begin(), dist[i][j].end(), INF);
+                char c = g[i][j];
+                if (c == '@') {
+                    d.push({i, j, 0});
+                    dist[i][j][0] = 0;
+                } else if (c >= 'a' && c <= 'z') cnt++;
+            }
+        }
+        while (!d.empty()) {
+            vector<int> info = d.front();
+            d.pop();
+            int x = info[0], y = info[1], cur = info[2], step = dist[x][y][cur];
+            for (vector<int> di : dirs) {
+                int nx = x + di[0], ny = y + di[1];
+                if (nx < 0 || nx >= n || ny < 0 || ny >= m) continue;
+                char c = g[nx][ny];
+                if (c == '#') continue;
+                if ((c >= 'A' && c <= 'Z') && (cur >> (c - 'A') & 1) == 0) continue;
+                int ncur = cur;
+                if (c >= 'a' && c <= 'z') ncur |= 1 << (c - 'a');
+                if (ncur == (1 << cnt) - 1) return step + 1;
+                if (step + 1 >= dist[nx][ny][ncur]) continue;
+                dist[nx][ny][ncur] = step + 1;
+                d.push({nx, ny, ncur});
+            }
+        }
+        return -1;
+    }
+};
+```
+Python3 代码：
+```Python
+class Solution:
+    def shortestPathAllKeys(self, g: List[str]) -> int:
+        dirs = [[0,1], [0,-1], [1,0], [-1,0]]
+        n, m, cnt = len(g), len(g[0]), 0
+        dist = defaultdict(lambda : 0x3f3f3f3f)
+        for i in range(n):
+            for j in range(m):
+                c = g[i][j]
+                if c == '@':
+                    d = deque([(i, j, 0)])
+                    dist[(i, j, 0)] = 0
+                elif 'a' <= c <= 'z':
+                    cnt += 1
+        while d:
+            x, y, cur = d.popleft()
+            step = dist[(x, y, cur)]
+            for di in dirs:
+                nx, ny = x + di[0], y + di[1]
+                if nx < 0 or nx >= n or ny < 0 or ny >= m:
+                    continue
+                c = g[nx][ny]
+                if c == '#':
+                    continue
+                if 'A' <= c <= 'Z' and (cur >> (ord(c) - ord('A')) & 1) == 0:
+                    continue
+                ncur = cur
+                if 'a' <= c <= 'z':
+                    ncur |= (1 << (ord(c) - ord('a')))
+                if ncur == (1 << cnt) - 1:
+                    return step + 1
+                if step + 1 >= dist[(nx, ny, ncur)]:
+                    continue
+                dist[(nx, ny, ncur)] = step + 1
+                d.append((nx, ny, ncur))
+        return -1
+```
 TypeScript 代码：
 ```TypeScript
 function shortestPathAllKeys(g: string[]): number {
@@ -159,44 +247,6 @@ function shortestPathAllKeys(g: string[]): number {
     }
     return -1
 }
-```
-Python3 代码：
-```Python
-class Solution:
-    def shortestPathAllKeys(self, g: List[str]) -> int:
-        dirs = [[0,1], [0,-1], [1,0], [-1,0]]
-        n, m, cnt = len(g), len(g[0]), 0
-        dist = defaultdict(lambda : 0x3f3f3f3f)
-        for i in range(n):
-            for j in range(m):
-                c = g[i][j]
-                if c == '@':
-                    d = deque([(i, j, 0)])
-                    dist[(i, j, 0)] = 0
-                elif 'a' <= c <= 'z':
-                    cnt += 1
-        while d:
-            x, y, cur = d.popleft()
-            step = dist[(x, y, cur)]
-            for di in dirs:
-                nx, ny = x + di[0], y + di[1]
-                if nx < 0 or nx >= n or ny < 0 or ny >= m:
-                    continue
-                c = g[nx][ny]
-                if c == '#':
-                    continue
-                if 'A' <= c <= 'Z' and (cur >> (ord(c) - ord('A')) & 1) == 0:
-                    continue
-                ncur = cur
-                if 'a' <= c <= 'z':
-                    ncur |= (1 << (ord(c) - ord('a')))
-                if ncur == (1 << cnt) - 1:
-                    return step + 1
-                if step + 1 >= dist[(nx, ny, ncur)]:
-                    continue
-                dist[(nx, ny, ncur)] = step + 1
-                d.append((nx, ny, ncur))
-        return -1
 ```
 * 时间复杂度：$O(n \times m \times 2^k)$
 * 空间复杂度：$O(n \times m \times 2^k)$
