--- a/LeetCode/761-770/769. 最多能完成排序的块（中等）.md
+++ b/LeetCode/761-770/769. 最多能完成排序的块（中等）.md
@@ -8,7 +8,9 @@ Tag : 「模拟」
 
 给定一个长度为 `n` 的整数数组 `arr` ，它表示在 $[0, n - 1]$ 范围内的整数的排列。
 
-我们将 `arr` 分割成若干 块 (即分区)，并对每个块单独排序。将它们连接起来后，使得连接的结果和按升序排序后的原数组相同。
+我们将 `arr` 分割成若干块 (即分区)，并对每个块单独排序。
+
+将它们连接起来后，使得连接的结果和按升序排序后的原数组相同。
 
 返回数组能分成的最多块数量。
 
@@ -37,7 +39,7 @@ Tag : 「模拟」
 * $n = arr.length$
 * $1 <= n <= 10$
 * $0 <= arr[i] < n$
-* `arr` 中每个元素都 不同
+* `arr` 中每个元素都不同
 
 ---
 
@@ -65,6 +67,36 @@ class Solution {
     }
 }
 ```
+C++ 代码：
+```C++
+class Solution {
+public:
+    int maxChunksToSorted(vector<int>& arr) {
+        int n = arr.size(), ans = 0;
+        int j = 0, minv = n, maxv = -1;
+        for (int i = 0; i < n; i++) {
+            minv = min(minv, arr[i]);
+            maxv = max(maxv, arr[i]);
+            if (j == minv && i == maxv) {
+                ans++; j = i + 1; minv = n; maxv = -1;
+            }
+        }
+        return ans;
+    }
+};
+```
+Python 代码：
+```Python
+class Solution:
+    def maxChunksToSorted(self, arr: List[int]) -> int:
+        n, ans = len(arr), 0
+        j, minv, maxv = 0, n, -1
+        for i in range(n):
+            minv, maxv = min(minv, arr[i]), max(maxv, arr[i])
+            if j == minv and i == maxv:
+                ans, j, minv, maxv = ans + 1, i + 1, n, -1
+        return ans
+```
 TypeScript 代码：
 ```TypeScript
 function maxChunksToSorted(arr: number[]): number {
@@ -78,18 +110,6 @@ function maxChunksToSorted(arr: number[]): number {
     }
     return ans
 }
-```
-Python 代码：
-```Python
-class Solution:
-    def maxChunksToSorted(self, arr: List[int]) -> int:
-        n, ans = len(arr), 0
-        j, minv, maxv = 0, n, -1
-        for i in range(n):
-            minv, maxv = min(minv, arr[i]), max(maxv, arr[i])
-            if j == minv and i == maxv:
-                ans, j, minv, maxv = ans + 1, i + 1, n, -1
-        return ans
 ```
 * 时间复杂度：$O(n)$
 * 空间复杂度：$O(1)$
